kubernetes/ckad/webapp-color-pod.yml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: webapp-color
  name: webapp-color
spec:
  containers:
  - image: registry.fritz.box/my/arm64/python:3.6-alpine
    name: webapp-color
    ports:
      - containerPort: 8080
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
