kubernetes/ckad/ceph-dashboard-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ceph-dashboard-ingress
  namespace: rook-ceph
spec:
  rules:
  - host: ceph-dashboard.fritz.box
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: rook-ceph-mgr-dashboard
            port:
              number: 7000
