kubernetes/ckad/ceph-rgw-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ceph-rgw-ingress
  namespace: rook-ceph
spec:
  rules:
  - host: ceph-rgw.fritz.box
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: rook-ceph-rgw-my-store
            port:
              number: 80
