kubernetes/ckad/dashboard-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: dashboard-ingress
  namespace: kubernetes-dashboard
spec:
  ingressClassName: "traefik-lb"
  rules:
    - host: dashboard.fritz.box
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              serviceName: kubernetes-dashboard
              servicePort: 80
