kubernetes/ckad/drupal-nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: drupal-nginx-ingress
  namespace: drupal
spec:
  rules:
  - host: drupal.fritz.box
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: nginx
            port:
              number: 80
status:
  loadBalancer: {}
