kubernetes/ckad/webapp-color-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webapp-color-ingress
  namespace: default
spec:
  rules:
  - host: webapp-color.fritz.box
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: webapp-color
            port:
              number: 80
status:
  loadBalancer: {}
