kubernetes/ckad/webapp-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webapp-ingress
  namespace: default
spec:
  rules:
  - host: webapp.fritz.box
    http:
      paths:
      - path: /color
        pathType: Prefix
        backend:
          service: 
            name: webapp-color
            port:
              number: 80
      - path: /mysql
        pathType: Prefix
        backend:
          service: 
            name: webapp-mysql
            port:
              number: 80
